# WareHouse-Menegement-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
app/models/: audit_log.py  debt.py  payment_method.py  stock_out.py
app/permissions/: constants.py
app/schemas/: debt.py  stock_out.py
app/services/: debt_service.py
app/utils/: export.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: API_INTEGRATIONS.md  BOT_FLOW.md  BUSINESS_RULES.md  CONFIGURATION.md  DATABASE_DESIGN.md  DEPLOYMENT.md  GLOSSARY.md  PROJECT_ARCHITECTURE.md  PROJECT_OVERVIEW.md  ROADMAP.md  SECURITY.md  TESTING_STRATEGY.md  USER_ROLES.md
docs/adr/: 0001-hexagonal-architecture.md  0002-immutable-ledger.md  0003-money-integer-minor-units.md  0004-anonymity-boundary.md  0005-permission-based-rbac.md  0006-aiogram-and-stack.md  0007-reports-derived-from-ledger.md  0008-backup-restore-anti-tamper.md  0009-public-private-and-pii-erasure.md  0010-annotations-and-derived-reversal.md  0011-system-actor.md  README.md
frontend/: .env.example  .gitignore  .npmrc  README.md  components.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: ProtectedRoute.tsx  RoleRoute.tsx
frontend/src/config/: nav.ts  permissions.ts
migrations/: env.py
src/donation_bot/: __init__.py  __main__.py
tests/unit/: _appsupport.py  test_access.py  test_accounts_and_staff.py  test_annotations.py  test_audit.py  test_authorization.py  test_config.py  test_infra.py  test_ledger.py  test_money.py  test_presentation.py  test_recent_entries.py  test_record_donation.py  test_record_expense.py  test_reports.py  test_reverse_entry.py  test_time.py
(+150 files in other folders)
